@@ -1,3 +1,7 @@
+2008-11-30  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* g++.dg/opt/reload3.C: New test.
+
 2008-11-19  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/37142
